# CS2-Prop-Grader

./: .replit  fix_deploy.py  pyproject.toml  railpack.json  replit.md  replit.nix
attached_assets/: Pasted--name-cs2-prop-grader-description-ALWAYS-activate-when-_1775861710567.txt  Pasted--usr-bin-env-python3-CS2-Prop-Grader-HLTV-Data-Scraper-_1775861747815.txt  Pasted--usr-bin-env-python3-CS2-Prop-Grader-Monte-Carlo-Simula_1775861767918.txt  Pasted-Algorithmic-Engineering-and-Quantitative-Analysis-for-P_1776587950530.txt  Pasted-Critical-Changes-Needed-1-Tighten-Elite-Tier-Requiremen_1776994015302.txt  Pasted-For-CS2-every-grade-should-print-a-minimum-card-that-mi_1776839223813.txt  Pasted-You-must-use-the-following-CS2-prop-grading-guide-as-yo_1776313545025.txt  Pasted-Your-bot-needs-to-shift-from-a-descriptive-stat-model-t_1776993641266.txt  Pasted-def-evaluate-potd-play-play-must-include-decision-OVER-_1777010041910.txt  Pasted-def-grade-prop-data-data-fields-expected-avg-median-lin_1777261013729.txt  Pasted-import-itertools-GRADE-ONE-PROP-FIXED--1777182304087_1777182304088.txt  Pasted-import-itertools-def-build-and-format-slips-props-slip-_1777101546588.txt  Pasted-import-itertools-def-build-slips-plays-max-legs-4-plays_1777011382095.txt  Pasted-import-numpy-as-np-import-math-class-CS2PropGrader-def-_1775009826340.txt  Pasted-import-requests-from-bs4-import-BeautifulSoup-import-re_1775816672030.txt  text_1775639492384.txt
cs2-bot/: bot.py  deep_analysis.py  esportslab_scraper.py  grade_engine.py  grades_db.py  grades_history.json  keep_alive.py  model_v2.py  (+9 more)
