[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.14.0",
    "discord-py>=2.7.1",
    "flask>=3.1.3",
    "lxml>=6.0.2",
    "numpy>=2.4.3",
    "requests>=2.33.0",
    "scipy>=1.17.1",
]
