[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "camoufox[geoip]>=0.4.11",
    "cloudscraper>=1.2.71",
    "curl-cffi>=0.14.0",
    "discord-py>=2.7.1",
    "flask>=3.1.3",
    "lxml>=6.0.2",
    "nodriver>=0.48.1",
    "numpy>=2.4.3",
    "playwright>=1.58.0",
    "playwright-stealth>=2.0.2",
    "requests>=2.33.0",
    "scipy>=1.17.1",
    "selenium>=4.41.0",
    "undetected-chromedriver>=3.5.5",
]
